<resources>
    <string name="app_name">WeatherNOW</string>
    <string name="weather">Weather</string>
    <string name="now">NOW</string>
    <string name="city_region_name">City or region name</string>
    <string name="state_code">State code (optional)</string>
    <string name="get_weather">Get Weather</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_for_another_region">Search for another region</string>
</resources>